sandbox_fixtures/sq205/force-app/main/default/objects/Escalation__c/Escalation__c.object-meta.xml
<CustomObject>
    <description>SQ-205 fixture: an escalation record; creating one moves the parent Case to Escalated and stamps the Account (via the SQ205_Escalation_Effects flow).</description>
    <label>Escalation</label>
    <nameField>
        <displayFormat>ESC-{0000}</displayFormat>
        <label>Escalation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>