sandbox_fixtures/sq205/force-app/main/default/objects/Escalation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SQ205 Escalations</relationshipLabel>
    <relationshipName>SQ205_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>